fix mobile layout

--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav d-lg-none">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Instructions</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Where to buy?</a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Mission</a>
+                        </li>
+                    </ul>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <a class="btn btn-buy" href="#">Buy now</a>
@@ -92,7 +110,7 @@
     </header>
 
     <!-- bottom-nav -->
-    <nav class="navbar navbar-light navbar-expand-lg py-4" id="bottomNav">
+    <nav class="navbar navbar-light navbar-expand-lg py-4 d-none d-lg-block" id="bottomNav">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarNavBollom">
                 <ul class="navbar-nav mx-auto">
