add button shadow

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </ul>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="btn btn-buy" href="#">Buy now</a>
+                            <a class="btn btn-buy shadow" href="#">Buy now</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Buy Game Supplies for the Event</a>
@@ -83,13 +83,13 @@
             <div class="row vertical-center height-500">
                 <div class="col-md-6">
                     <div class="content">
-                        <h1 class="h3 sub-heading">DO YOU HAVE WHAT IT TAKES TO BE</h1>
-                        <h3 class="h1 heading font-gotham">CEO OR CFO?</h3>
+                        <h1 class="h3 sub-heading text-uppercase">DO YOU HAVE WHAT IT TAKES TO BE</h1>
+                        <h3 class="h1 heading font-gotham text-uppercase">CEO OR CFO?</h3>
                         <p class="hero-paragraph">Business is a big game, so what better way to learn the
                         basics of business financial management then by playing a game!</p>
                         <div class="btn-container">
-                            <a href="#" class="btn btn-primary">Explore</a>
-                            <a href="#" class="btn btn-outline-primary">lorem</a>
+                            <a href="#" class="btn btn-primary shadow">Explore</a>
+                            <a href="#" class="btn btn-outline-primary shadow">lorem</a>
                         </div>
                         
                         <ul class="social-icons mt-5">
