--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         basics of business financial management then by playing a game!</p>
                         <div class="btn-container">
                             <a href="#" class="btn btn-primary shadow">Explore</a>
-                            <a href="#" class="btn btn-outline-primary shadow">lorem</a>
+                            <a href="#" class="btn btn-outline-primary">lorem</a>
                         </div>
                         
                         <ul class="social-icons mt-5">
@@ -114,8 +114,12 @@
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarNavBollom">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
+                    <li class="nav-item has-submenu">
                         <a class="nav-link" href="#">Instructions</a>
+                        <ul class="sub-menu">
+                            <li><a href="#">Region</a></li>
+                            <li><a href="#">Grossery</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Where to buy?</a>
@@ -145,7 +149,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
         <script src="./assets/js/particles.min.js"></script>
-        <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+        <!-- <script src="http://threejs.org/examples/js/libs/stats.min.js"></script> -->
     <script src="./assets/js/app.js"></script>
 </body>
 
