--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <nav class="navbar navbar-expand-lg navbar-light py-3" id="navTop">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
-                    <img src="./assets/img/logo.svg" width="60" height="60" alt="Easy profit">
+                    <img src="./assets/img/logo.svg" width="60" height="60" class="logo logo-front"lt="Easy profit">
+                    <img src="./assets/img/logoflip.svg" height="60" class="logo logo-back"lt="Easy profit">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -32,8 +33,16 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Instructions</a>
+                        <li class="nav-item dropdown">
+                            <!-- <a class="nav-link" href="#">Instructions</a> -->
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                                aria-expanded="false">
+                                Instructions
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Grossery</a>
+                                <a class="dropdown-item" href="#">Region</a>
+                            </div>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Where to buy?</a>
