--- a/buy.html
+++ b/buy.html
@@ -21,7 +21,8 @@
         <nav class="navbar navbar-expand-lg navbar-light py-3" id="navTop">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
-                    <img src="./assets/img/logo.svg" width="60" height="60" alt="Easy profit">
+                    <img src="./assets/img/logo.svg" width="60" height="60" class="logo logo-front" lt="Easy profit">
+                    <img src="./assets/img/logoflip.svg" height="60" class="logo logo-back" lt="Easy profit">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
