--- a/glossary.html
+++ b/glossary.html
@@ -80,7 +80,7 @@
                 </g>
             </g>
         </svg>
-
+<!-- 
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1803.23 959" class="bottom-right">
             <g id="Layer_2" data-name="Layer 2">
                 <g id="Layer_1-2" data-name="Layer 1">
@@ -88,7 +88,7 @@
                     />
                 </g>
             </g>
-        </svg>
+        </svg> -->
 
         <section id="instructions">
             <div class="container">
