Add page 5 and 6 from pdf file to glossary.html

--- a/glossary.html
+++ b/glossary.html
@@ -80,7 +80,7 @@
                 </g>
             </g>
         </svg>
-<!-- 
+        <!-- 
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1803.23 959" class="bottom-right">
             <g id="Layer_2" data-name="Layer 2">
                 <g id="Layer_1-2" data-name="Layer 1">
@@ -374,11 +374,142 @@
                                 the trigger for changes in these values will happen as a result of Company Cards.
                             </li>
                             <li>
-                                NET CASH FLOW: Net Cash Flow is the result of each of the three financial activities sections
-                                for the month. The result shows if the company had a positive or negative cash flow for the
-                                month. Viewing the monthly values over time can show trends or annual cycles.
+                                NET CASH FLOW: Net Cash Flow is the result of each of the three financial activities sections for the month. The result shows
+                                if the company had a positive or negative cash flow for the month. Viewing the monthly values
+                                over time can show trends or annual cycles.
                             </li>
                         </ul>
+
+                        <h5 class="heading">
+                            Glossary of Accounting terms
+                        </h5>
+                        <p class="contents">Accounts Receivable &ndash; AR: The amount of money owed by your customers after
+                            goods and/or services have been delivered and/or used.Accounting &ndash; ACCG: A systematic way
+                            of recording and reporting financial transactions.
+                        </p>
+                        <p class="contents">Accounts Payable &ndash; AP: The amount of money a company owes creditors in
+                            return for goods and/or services they have delivered.
+                        </p>
+                        <p class="contents">Accrual Accounting &ndash; ACR: Accrual accounting relies on the following two
+                            principles: cash accounting and the revenue recognition principle. The revenue recognition principle
+                            states that revenues are recognized when they are realized or realizable, and are earned, no
+                            matter when the payment is received. Also review Cash Accounting.
+                        </p>
+                        <p class="contents">Assets (Fixed and Current) &ndash; FA and CA: Fixed assets are longer-term and
+                            will likely provide benefits to a company for more than one year, such as a building, land or
+                            equip- ment. Current assets are those that will be used within one year. Typically this could
+                            be cash, inventory or accounts receivable.
+                        </p>
+                        <p class="contents">Bad Debt: Bad Debt includes all reasonable means to collect a debt have been
+                            tried and have failed so the amount owed is written off as a loss and becomes categorized as
+                            an expense on an income statement.
+                        </p>
+                        <p class="contents">Balance Sheet &ndash; BS: A financial report that summarizes a company's assets,
+                            liabilities and owner&rsquo;s equity at a given time.
+                        </p>
+                        <p class="contents">Capital &ndash; CAP: A financial asset and its value, such as cash or goods.
+                            Working capital is calculated by taking your current assets subtracted from current liabilities.
+                        </p>
+                        <p class="contents">Cash Accounting &ndash; CAS: Cash Accounting is an accounting method where receipts
+                            are recorded during the period they are received, and expenses are recorded in the period in
+                            which they are actually paid. Small businesses often use cash accounting because it is simpler
+                            and more straightforward, and it provides a clear picture of how much money the business actually
+                            has on hand. Also review Accrual Accounting.
+                        </p>
+                        <p class="contents">Cash Flow &ndash; CF: The revenue or expense expected to be generated through
+                            business activities (sales, manufacturing, etc.) over a period of time. Maintaining positive
+                            cash flow is essential in order for businesses to survive.
+                        </p>
+                        <p class="contents">Certified Public Accountant &ndash; CPA: A designation given to someone who has
+                            passed a standardized CPA exam and met government-mandated work experience and educational requirements
+                            to become a CPA.
+                        </p>
+                        <p class="contents">Chief Executive Officer - CEO: &ldquo;The Big Cheese&rdquo; Chief Financial Officer
+                            - CFO: &ldquo;The Bean Counter&rdquo;
+                        </p>
+                        <p class="contents">Cost of Goods Sold &ndash; COGS: The direct expense related to producing the
+                            goods sold by a company. This may include the cost of the raw materials and amount of employee
+                            labor expended.
+                        </p>
+                        <p class="contents">Credit &ndash; CR: An accounting entry that may either decrease assets or increase
+                            liabilities and equity on the company's balance sheet, depending on the transaction. When using
+                            the double-entry accounting method there will be two recorded entries for every transaction:
+                            a credit and a debit.
+                        </p>
+                        <p class="contents">Debit &ndash; DR: An accounting entry where there is either an increase in assets
+                            or a decrease in liabilities on a company's balance sheet.
+                        </p>
+                        <p class="contents">Expenses (Fixed, Variable, Accrued, Operation) &ndash; FE, VE, AE, OE: The fixed,
+                            variable, accrued or day-to-day costs that a business may incur through its operations. Examples
+                            of expenses include payments to banks, suppliers, employees or equipment.
+                        </p>
+                        <p class="contents">Generally Accepted Accounting Principles &ndash; GAAP: A set of rules and guidelines
+                            devel- oped by the accounting industry for companies to follow when reporting financial data.
+                            Following these rules is especially critical for all publicly traded companies.
+                        </p>
+
+                        <p>
+                            General Ledger &ndash; GL: A complete record of the financial transactions over the life of a company.
+                        </p>
+                        <p>
+                            Gross Profit &ndash; GP: Gross Profit refers to what is left after you subtract the cost of goods sold from the sales. It
+                            is also called gross margin. For example, if an organization buys in an item for $50 and sells
+                            it for $75, then the gross profit will be $25. Gross Profit calculations do not include or consider
+                            taxes.
+                        </p>
+                        <p>
+                            Liabilities (Current and Long-Term) &ndash; CL and LTL: A company's debts or financial obligations it incurred during business
+                            operations. Current liabilities are those debts that are payable within a year, such as a debt
+                            to suppliers. Long-term liabilities are typically payable over a period of time greater than
+                            one year. An example of a long-term liability would be a bank loan.
+                        </p>
+                        <p>
+                            Liquidity and Money &ndash; LM: Liquidity is the ability to meet current obligations with cash or other assets that can be
+                            quickly converted into cash in order to pay bills as they become due. In other words the organization
+                            has enough cash or assets that will become cash so that it is able to write checks without running
+                            out of money.
+                        </p>
+                        <p>
+                            Modified Cash Accounting: Modified Cash Accounting (or Basis) is an accounting method that combines elements of the two major
+                            accounting methods, the cash method and the accrual method. The modified cash basis method uses
+                            accruals for long-term balance sheet elements and the cash basis for short-term ones. Also review
+                            Accrual Accounting and Cash Accounting.
+                        </p>
+                        <p>
+                            Net Income &ndash; NI: A company's total earnings, also called net profit or the &ldquo;Easy Profit.&rdquo; Net income is
+                            calculated by subtracting total expenses from total revenues.
+                        </p>
+                        <p>
+                            Owner's Equity &ndash; OE: An owner&rsquo;s equity is typically explained in terms of the percentage amount of stock a person
+                            has ownership interest in the company. The owners of the stock are commonly referred to as the
+                            shareholders.
+                        </p>
+                        <p>
+                            Present Value &ndash; PV: The value of how much a future sum of money is worth today. Present value helps us understand how
+                            receiving $100 now is worth more than receiving $100 a year from now.
+                        </p>
+                        <p>
+                            Profit and Loss Statement &ndash; P&amp;L: A financial statement that is used to summarize a company&rsquo;s performance
+                            and financial position by reviewing revenues, costs and expenses during a specific period of
+                            time; such as monthly, quarterly or annually.
+                        </p>
+                        <p>
+                            Return on Investment &ndash; ROI: A measure used to evaluate the financial performance relative to the amount of money that
+                            was invested. The ROI is calculated by dividing the net profit by the cost of the investment.
+                            The result is often expressed as a percentage.
+                        </p>
+                        <p>
+                            Sales or Revenue &ndash; Sales or REV: Sales or Revenue is the income that flows into an organization, and it is often used
+                            almost synonymously with sales. In government and nonprofit organizations it includes taxes and
+                            grants. Don't confuse revenues with receipts. Under the accrual basis of accounting, revenues
+                            are shown in the period they are earned, not in the period when the cash is collected. Revenues
+                            occur when money is earned; receipts occur when cash is received.
+                        </p>
+                        <p>
+                            Working Capital &ndash; WC: Working Capital is the difference between current assets and current liabilities. An organization
+                            without sufficient working capital cannot pay its debts as they fall due. Poor financial management
+                            practices can lead even a profitable company to close due to Working Capital shortages.
+                        </p>
                     </div>
                 </div>
             </div>
