--- a/glossary.html
+++ b/glossary.html
@@ -90,7 +90,7 @@
             </g>
         </svg> -->
 
-        <section id="instructions">
+        <section id="instructions" class="my-5">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -288,11 +288,11 @@
                                 group.
                             </p>
                         </div>
-
+                        
                         <h5 class="heading">
                             Game board legend
                         </h5>
-                        <ul>
+                        <ul class="gameboard-legend-list">
                             <li>
                                 INCOME: Income is generally the top portion of the Income Statement which is also referred to as the Profit & Loss Statement,
                                 P&L or P&L Statement. Income includes all funds flowing into the entity for any reason. Income
