update modal and nav links

--- a/index.html
+++ b/index.html
@@ -126,21 +126,21 @@
                     <li class="nav-item has-submenu">
                         <a class="nav-link" href="#">Instructions</a>
                         <ul class="sub-menu">
-                            <li><a href="#">Region</a></li>
-                            <li><a href="#">Grossery</a></li>
+                            <li><a href="./region.html">Region</a></li>
+                            <li><a href="./glossary.html">Grossery</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Where to buy?</a>
+                        <a class="nav-link" href="./where-to-buy.html">Where to buy?</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Mission</a>
+                        <a class="nav-link" href="./mission.html">Mission</a>
                     </li>
                 </ul>
             </div>
