--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="#">Where to buy?</a>
                         </li>
 
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="#">Contact</a>
                         </li>
                         <li class="nav-item">
