--- a/glossary.html
+++ b/glossary.html
@@ -390,8 +390,8 @@
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="navbarNavBollom">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item has-submenu">
-                        <a class="nav-link active" href="#">Instructions</a>
+                    <li class="nav-item active has-submenu">
+                        <a class="nav-link" href="#">Instructions</a>
                         <ul class="sub-menu">
                             <li><a href="./region.html">Region</a></li>
                             <li><a href="./glossary.html">Grossery</a></li>
