--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </ul>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="btn btn-buy shadow" href="#">Buy now</a>
+                            <a class="btn btn-buy shadow" href="./buy.html">Buy now</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-toggle="modal" data-target=".game-suplies-modal">Buy Game Supplies for the Event</a>
