--- a/index.html
+++ b/index.html
@@ -56,14 +56,21 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="btn btn-buy shadow" href="./buy.html">Buy now</a>
-                        </li>
-                        <li class="nav-item">
+                        
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#" data-toggle="modal" data-target=".game-suplies-modal">Buy Game Supplies for the Event</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#" data-toggle="modal" data-target=".host-event-modal">Host a Game at your Event</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a href="#" class="btn btn-outline-primary mr-4">Play Now</a>
+                        </li>
+
+
+                        <li class="nav-item">
+                            <a class="btn btn-buy shadow" href="./buy.html">Buy now</a>
                         </li>
                     </ul>
                 </div>
