--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <a class="nav-link" href="#" data-toggle="modal" data-target=".game-suplies-modal">Buy Game Supplies for the Event</a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#" data-toggle="modal" data-target=".host-event-modal">Host a Game at your Event</a>
+                            <a class="nav-link" href="#" data-toggle="modal" data-target=".host-event-modal">Host A Event</a>
                         </li>
 
                         <li class="nav-item">
